Side navigation bar size fixed for medium/larger screen, but not responsive.

--- a/app/StyleSheets/sidenav.css
+++ b/app/StyleSheets/sidenav.css
@@ -2,60 +2,34 @@
     /*Allows left justified positioning otherwise, this position would be based on other elements. Throwing views/elements off.*/
     position: absolute;
     /*Initial width*/
-    width: 10px;
+    width: 160px;
+    height: 65vh;
+    left: -140px;
+    margin-top:5vh;
+    transition: 0.4s;
+
+    /*Clicks don't work as expected without z-index modification*/
     z-index: 2;
-    left: 0;
-    bottom:0;
     overflow-x: hidden;
-    padding-top: 60px;
-    background-color: rgba(77, 205, 224, 0.47);
-    transition: 0.5s;
     opacity: 0.2;
     border:1px solid gray;
+    background-color: rgba(77, 205, 224, 0.47);
 }
+
+/*Make the sidenav visible by sliding it out*/
 .sidenav:hover{
     opacity: 1;
-    width: 150px;
+    left:0;
 }
 
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidenav a:hover {
+.sidenav div:hover {
     color: #f1f1ea;
 }
 
 .sidenav img{
-    min-width: 60px;
-    width: 100%;
+    width: 60px;
 }
 
-.sidenav img:hover{
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-
-.openbtn{
-    font-size:30px;
-    cursor:pointer;
-    position: absolute;
-    z-index: 1;
-    top:50px;
-    left:0px;
-}
 
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
